2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.man: More semantic markup, less visual one.
	* matrix.man:
	* pool.man:
	* record.man:
	* tree.man:

2002-11-06  Brett Schwarz  <schwarzkopf@users.sourceforge.net>

        * record.tcl: cleaned up code based on output from frink

2002-11-05  Brett Schwarz  <schwarzkopf@users.sourceforge.net>

        * struct.tcl: modified to include record.tcl

        * record.man:
        * record.html:
        * record.n:
        * record.test:
        * record.tcl: new data structure

2002-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.test: 
	* graph.man:
	* graph.tcl: Implemented FR 603924. getall, keys, keyexists
	  methods for keys of the whole graph.

2002-08-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.test: Followup to fix for bug SF #587533. Had to update the
	  test suite too.

2002-08-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.tcl (lappend): Fixed bug SF #587533 reported by Evan Rempel
	  <erempel@users.sourceforge.net>.

	* pool.tcl: Fixed bug SF #585093, reported by Michael Cleverly
	  <cleverly@users.sourceforge.net>. Patch provided by Michael too.

2002-07-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.man: Updated the documentation to clarify the behaviour.

	* test.tcl: Updated testsuite, part of the patch below.

	* tree.tcl (_move): Accepted patch by Brian Theado
	  <btheado@users.sourceforge.net> fixing the behaviour of mov, SF
	  bug #578460. The command now also validates all nodes before
	  trying to move any of them.

2002-05-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* matrix.man: Fixed typo (graph -> matrix).

	* struct.tcl: Added pool files to list of files to source.

	* pool.man: New documentation for pool based upon the original
	  HTML manpage.

	* pool.html:
	* pooltest.tcl:
	* pool.tcl: New data structure, pool, by Erik Leunissen